# easypg

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: generator.h  memory.h  random.h  version.h
src/: generator.c  main.c  memory.c  random.c
